2005-10-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/boehm-gc/gc-refs.c,
	kaffe/kaffevm/boehm-gc/gc-refs.h,
	kaffe/kaffevm/boehm-gc/gc2.c,
	kaffe/kaffevm/boehm-gc/gc2.h:
	Fixed Boehm-GC adaptation layer.
	
	* kaffe/kaffevm/boehm-gc/boehm/pthread_support.c
	(pthread_join)
	In some case a thread may be detached just after the UNLOCK().

2005-10-01  Jim Huang  <jserv@kaffe.org>

	* libraries/javalib/gnu/java/net/PlainSocketImpl.java (getOption):
	Fixlet. When you use getOption(int) in order to ask it for
	SO_REUSEADDR, you get an Integer back which is either 0 or 1. It 
	should be a Boolean instead, as getReuseAddress() executed on a 
	socket expects this.
	Patched by:  Nico R.  <n-roeser@gmx.net>

2005-10-01  Jim Huang  <jserv@kaffe.org>

	* kaffe/kaffevm/stats.c: Fixlet to compilation error when
	--with-stats enabled.
	Reported by:  Pietro Ferrari  <pietro.ferrari@gmail.com>.

2005-09-30  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Improve Nano-X detection.

	* libraries/clib/awt/classpath-qt/componentevent.cpp,
	libraries/clib/awt/classpath-qt/mainqtthread.cpp,
	libraries/clib/awt/classpath-qt/qtframepeer.cpp:
	Add regular includes.

	* libraries/javalib/Makefile.am.in: Fixlet to Nano-X AWT.

	* po/zh_CN.po,
	po/zh_TW.po: Fix typo.

2005-09-30  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javadoc.in,
	kaffe/scripts/compat/javadoc.in: Removed ANTLR_JAR.

	Reported by:  Joshua Nichols  <joshua.nichols@gmail.com>
	
2005-09-28  Rafal Lewczuk <rafal.lewczuk@gmail.com>

	* kaffe/kaffevm/kaffe.def,
	kaffe/kaffevm/intrp/machine.c,
	kaffe/kaffevm/jit/machine.h,
	kaffe/kaffevm/jit3/machine.h,
	kaffe/kaffevm/verifier/verify.c:
	Simple direct threading interpreter implementation.

2005-09-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* RELEASE-NOTES: Changed the number of tests from 147 to 148.

2005-09-25  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Bumped version number.
	Simplified gmp tests.

	* include/Arrays.h: HArrayOfBoolean fixed type of