@@ -1,3 +1,7 @@
+2005-10-02  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/stats.c: Added guards for sys/resource.h include.
+
 2005-10-01  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* kaffe/kaffevm/boehm-gc/gc-refs.c,
